--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
-certifi==2020.6.20
+appdirs==1.4.3
+asgiref==3.2.3
+astroid==2.3.3
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
 chardet==3.0.4
-idna==2.10
-praw==7.1.0
-prawcore==1.5.0
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-requests==2.24.0
-six==1.15.0
-update-checker==0.18.0
-urllib3==1.25.11
-websocket-client==0.57.0
+distlib==0.3.0
+Django==3.0.2
+dnspython==1.16.0
+filelock==3.0.12
+fuzzywuzzy==0.17.0
+idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.3
+lxml==4.4.2
+mccabe==0.6.1
+mysql==0.0.2
+mysql-connector==2.2.9
+mysql-connector-python==8.0.19
+mysqlclient==1.4.6
+protobuf==3.6.1
+pylint==2.4.4
+PyMySQL==0.10.1
+pytz==2019.3
+requests==2.22.0
+six==1.14.0
+soupsieve==1.9.5
+sqlparse==0.3.0
+urllib3==1.25.7
+virtualenv==20.0.16
+wrapt==1.11.2
