--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,64 @@
-appdirs==1.4.3
-asgiref==3.2.3
-astroid==2.3.3
-beautifulsoup4==4.8.2
-bs4==0.0.1
-certifi==2019.11.28
+absl-py==0.11.0
+appnope==0.1.0
+astunparse==1.6.3
+backcall==0.2.0
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
-distlib==0.3.0
-Django==3.0.2
-dnspython==1.16.0
-filelock==3.0.12
-fuzzywuzzy==0.17.0
-idna==2.8
-isort==4.3.21
-lazy-object-proxy==1.4.3
-lxml==4.4.2
-mccabe==0.6.1
-mysql==0.0.2
-mysql-connector==2.2.9
-mysql-connector-python==8.0.19
-mysqlclient==1.4.6
-protobuf==3.6.1
-pylint==2.4.4
-PyMySQL==0.10.1
-pytz==2019.3
-requests==2.22.0
-six==1.14.0
-soupsieve==1.9.5
-sqlparse==0.3.0
-urllib3==1.25.7
-virtualenv==20.0.16
-wrapt==1.11.2
+decorator==4.4.2
+gast==0.3.3
+google-auth==1.23.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+graphviz==0.15
+grpcio==1.33.2
+h5py==2.10.0
+idna==2.10
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.17.2
+jupyter-client==6.1.7
+jupyter-core==4.7.0
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+Markdown==3.3.3
+numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.3.0
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+praw==7.1.0
+prawcore==1.5.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pydot==1.4.1
+pydotplus==2.0.2
+Pygments==2.7.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+PyYAML==5.3.1
+pyzmq==20.0.0
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scipy==1.5.4
+six==1.15.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+tornado==6.1
+traitlets==5.0.5
+update-checker==0.18.0
+urllib3==1.25.11
+wcwidth==0.2.5
+websocket-client==0.57.0
+Werkzeug==1.0.1
+wrapt==1.12.1
