--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 absl-py==0.11.0
 appnope==0.1.0
 astunparse==1.6.3
+async-generator==1.10
+attrs==20.3.0
 backcall==0.2.0
+bleach==3.2.1
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
 cycler==0.10.0
 decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
 gast==0.3.3
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
@@ -15,22 +21,35 @@ graphviz==0.15
 grpcio==1.33.2
 h5py==2.10.0
 idna==2.10
+import-ipynb==0.1.3
 ipykernel==5.3.4
 ipython==7.19.0
 ipython-genutils==0.2.0
 jedi==0.17.2
+Jinja2==2.11.2
 joblib==0.17.0
+jsonschema==3.2.0
 jupyter-client==6.1.7
 jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.3
+MarkupSafe==1.1.1
 matplotlib==3.3.3
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+packaging==20.7
 pandas==1.1.4
+pandocfilters==1.4.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -46,29 +65,33 @@ pydot==1.4.1
 pydotplus==2.0.2
 Pygments==2.7.2
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.4
 PyYAML==5.3.1
 pyzmq==20.0.0
+regex==2020.11.13
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
-scikit-learn==0.23.2
 scipy==1.5.4
+seaborn==0.11.0
 six==1.15.0
-sklearn==0.0
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
+tensorflow-hub==0.10.0
 termcolor==1.1.0
-threadpoolctl==2.1.0
+testpath==0.4.4
 tornado==6.1
+tqdm==4.53.0
 traitlets==5.0.5
 update-checker==0.18.0
 urllib3==1.25.11
 wcwidth==0.2.5
+webencodings==0.5.1
 websocket-client==0.57.0
 Werkzeug==1.0.1
 wrapt==1.12.1
